// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="chrdymz c-tnqn26 c-6aay07"
  >
    <span
      class=""
    >
      Default
    </span>
  </div>
  <div
    class="chrdymz c-ho2d6b c-6aay07"
  >
    <span
      class=""
    >
      Info
    </span>
  </div>
  <div
    class="chrdymz c-5lh0fy c-6aay07"
  >
    <span
      class=""
    >
      Danger
    </span>
  </div>
  <div
    class="chrdymz cyf3orh c-6aay07"
  >
    <span
      class=""
    >
      Warning
    </span>
  </div>
  <div
    class="chrdymz c-f210u4 c-6aay07"
  >
    <span
      class=""
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c4c9jce c-6aay07"
    >
      <span
        class=""
      >
        Tangerine
      </span>
    </div>
    <div
      class="chrdymz ctj5kx6 c-6aay07"
    >
      <span
        class=""
      >
        Magenta
      </span>
    </div>
    <div
      class="chrdymz ce52xn c-6aay07"
    >
      <span
        class=""
      >
        Purple
      </span>
    </div>
    <div
      class="chrdymz c-319x3j c-6aay07"
    >
      <span
        class=""
      >
        Indigo
      </span>
    </div>
    <div
      class="chrdymz c-ho5z26 c-6aay07"
    >
      <span
        class=""
      >
        Cyan
      </span>
    </div>
    <div
      class="chrdymz c-hnzcp7 c-6aay07"
    >
      <span
        class=""
      >
        Neon
      </span>
    </div>
    <div
      class="chrdymz ckkcvjo c-6aay07"
    >
      <span
        class=""
      >
        Lemon
      </span>
    </div>
    <div
      class="chrdymz c-4utmb c-6aay07"
    >
      <span
        class=""
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c4c9jce c-ho4dpa"
    >
      <span
        class=""
      >
        Tangerine
      </span>
    </div>
    <div
      class="chrdymz ctj5kx6 c-ho4dpa"
    >
      <span
        class=""
      >
        Magenta
      </span>
    </div>
    <div
      class="chrdymz ce52xn c-ho4dpa"
    >
      <span
        class=""
      >
        Purple
      </span>
    </div>
    <div
      class="chrdymz c-319x3j c-ho4dpa"
    >
      <span
        class=""
      >
        Indigo
      </span>
    </div>
    <div
      class="chrdymz c-ho5z26 c-ho4dpa"
    >
      <span
        class=""
      >
        Cyan
      </span>
    </div>
    <div
      class="chrdymz c-hnzcp7 c-ho4dpa"
    >
      <span
        class=""
      >
        Neon
      </span>
    </div>
    <div
      class="chrdymz ckkcvjo c-ho4dpa"
    >
      <span
        class=""
      >
        Lemon
      </span>
    </div>
    <div
      class="chrdymz c-4utmb c-ho4dpa"
    >
      <span
        class=""
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c4c9jce c-2gzry5"
    >
      <span
        class=""
      >
        Tangerine
      </span>
    </div>
    <div
      class="chrdymz ctj5kx6 c-2gzry5"
    >
      <span
        class=""
      >
        Magenta
      </span>
    </div>
    <div
      class="chrdymz ce52xn c-2gzry5"
    >
      <span
        class=""
      >
        Purple
      </span>
    </div>
    <div
      class="chrdymz c-319x3j c-2gzry5"
    >
      <span
        class=""
      >
        Indigo
      </span>
    </div>
    <div
      class="chrdymz c-ho5z26 c-2gzry5"
    >
      <span
        class=""
      >
        Cyan
      </span>
    </div>
    <div
      class="chrdymz c-hnzcp7 c-2gzry5"
    >
      <span
        class=""
      >
        Neon
      </span>
    </div>
    <div
      class="chrdymz ckkcvjo c-2gzry5"
    >
      <span
        class=""
      >
        Lemon
      </span>
    </div>
    <div
      class="chrdymz c-4utmb c-2gzry5"
    >
      <span
        class=""
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c4c9jce cokjezt"
    >
      <span
        class=""
      >
        Tangerine
      </span>
    </div>
    <div
      class="chrdymz ctj5kx6 cokjezt"
    >
      <span
        class=""
      >
        Magenta
      </span>
    </div>
    <div
      class="chrdymz ce52xn cokjezt"
    >
      <span
        class=""
      >
        Purple
      </span>
    </div>
    <div
      class="chrdymz c-319x3j cokjezt"
    >
      <span
        class=""
      >
        Indigo
      </span>
    </div>
    <div
      class="chrdymz c-ho5z26 cokjezt"
    >
      <span
        class=""
      >
        Cyan
      </span>
    </div>
    <div
      class="chrdymz c-hnzcp7 cokjezt"
    >
      <span
        class=""
      >
        Neon
      </span>
    </div>
    <div
      class="chrdymz ckkcvjo cokjezt"
    >
      <span
        class=""
      >
        Lemon
      </span>
    </div>
    <div
      class="chrdymz c-4utmb cokjezt"
    >
      <span
        class=""
      >
        Orange
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c-tnqn26 c-6aay07"
    >
      <span
        class=""
      >
        Default
      </span>
    </div>
    <div
      class="chrdymz c-ho2d6b c-6aay07"
    >
      <span
        class=""
      >
        Info
      </span>
    </div>
    <div
      class="chrdymz c-5lh0fy c-6aay07"
    >
      <span
        class=""
      >
        Danger
      </span>
    </div>
    <div
      class="chrdymz cyf3orh c-6aay07"
    >
      <span
        class=""
      >
        Warning
      </span>
    </div>
    <div
      class="chrdymz c-f210u4 c-6aay07"
    >
      <span
        class=""
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c-tnqn26 c-ho4dpa"
    >
      <span
        class=""
      >
        Default
      </span>
    </div>
    <div
      class="chrdymz c-ho2d6b c-ho4dpa"
    >
      <span
        class=""
      >
        Info
      </span>
    </div>
    <div
      class="chrdymz c-5lh0fy c-ho4dpa"
    >
      <span
        class=""
      >
        Danger
      </span>
    </div>
    <div
      class="chrdymz cyf3orh c-ho4dpa"
    >
      <span
        class=""
      >
        Warning
      </span>
    </div>
    <div
      class="chrdymz c-f210u4 c-ho4dpa"
    >
      <span
        class=""
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz c-tnqn26 c-2gzry5"
    >
      <span
        class=""
      >
        Default
      </span>
    </div>
    <div
      class="chrdymz c-ho2d6b c-2gzry5"
    >
      <span
        class=""
      >
        Info
      </span>
    </div>
    <div
      class="chrdymz c-5lh0fy c-2gzry5"
    >
      <span
        class=""
      >
        Danger
      </span>
    </div>
    <div
      class="chrdymz cyf3orh c-2gzry5"
    >
      <span
        class=""
      >
        Warning
      </span>
    </div>
    <div
      class="chrdymz c-f210u4 c-2gzry5"
    >
      <span
        class=""
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="chrdymz c-tnqn26 cokjezt"
    >
      <span
        class=""
      >
        Default
      </span>
    </div>
    <div
      class="chrdymz c-ho2d6b cokjezt"
    >
      <span
        class=""
      >
        Info
      </span>
    </div>
    <div
      class="chrdymz c-5lh0fy cokjezt"
    >
      <span
        class=""
      >
        Danger
      </span>
    </div>
    <div
      class="chrdymz cyf3orh cokjezt"
    >
      <span
        class=""
      >
        Warning
      </span>
    </div>
    <div
      class="chrdymz c-f210u4 cokjezt"
    >
      <span
        class=""
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="chrdymz ckocamg c-tnqn26 c-6aay07"
    >
      <span
        class=""
      >
        Small
      </span>
    </div>
    <div
      class="chrdymz c-tnqn26 c-6aay07"
    >
      <span
        class=""
      >
        Default
      </span>
    </div>
    <div
      class="chrdymz ckkaf3w c-tnqn26 c-6aay07"
    >
      <span
        class=""
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="chrdymz ckocamg c-tnqn26 c-6aay07"
    >
      <div
        class=""
      >
        <span>
          Small
        </span>
      </div>
      <div
        class="c-2h4372"
      >
        <span
          class="caez2ox"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chrdymz c-tnqn26 c-6aay07"
    >
      <div
        class=""
      >
        <span>
          Default
        </span>
      </div>
      <div
        class="c-2h4372"
      >
        <span
          class="caez2ox"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chrdymz ckkaf3w c-tnqn26 c-6aay07"
    >
      <div
        class=""
      >
        <span>
          Large
        </span>
      </div>
      <div
        class="c-2h4372"
      >
        <span
          class="caez2ox"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="chrdymz c-tnqn26 c-6aay07"
    >
      <div
        class=""
      >
        <span>
          Tag 1
        </span>
      </div>
      <div
        class="c-2h4372"
      >
        <span
          class="caez2ox"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chrdymz c-tnqn26 c-6aay07"
    >
      <div
        class=""
      >
        <span>
          Tag 2
        </span>
      </div>
      <div
        class="c-2h4372"
      >
        <span
          class="caez2ox"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chrdymz c-tnqn26 c-6aay07 c-27r46d"
    >
      <div
        class=""
      >
        <span>
          Tag 3
        </span>
      </div>
      <div
        class="c-2h4372"
      >
        <span
          class="caez2ox"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chrdymz c-tnqn26 c-2gzry5"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class=""
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-right: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="chrdymz c-tnqn26 c-6aay07"
  >
    <div
      class=""
    >
      <span>
        Abc
      </span>
    </div>
    <div
      class="c-2h4372"
    >
      <span
        class="caez2ox"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="chrdymz c-tnqn26 c-6aay07"
  >
    <span
      class=""
    >
      Default
    </span>
  </div>
  <div
    class="chrdymz c-walqz6 c-tnqn26 c-6aay07"
  >
    <span
      class=""
    >
      Rounded
    </span>
  </div>
</div>
`;
